--- a/react_mui/create-react-app/package.json
+++ b/react_mui/create-react-app/package.json
@@ -14,8 +14,11 @@
     "@mui/material": "latest",
     "@mui/icons-material": "latest",
     "markdown-to-jsx": "latest",
+    "mui-markdown": "latest",
+    "react-markdown": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "latest",
     "react-scripts": "latest"
   },
   "browserslist": {
